// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Reducer should have default state 1`] = `
Object {
  "token": "",
  "username": "",
}
`;

exports[`User Reducer should set token 1`] = `
Object {
  "token": "token",
  "username": "",
}
`;

exports[`User Reducer should set username 1`] = `
Object {
  "token": "",
  "username": "username",
}
`;
